# llmagent

./: .gitignore  README.md  environment.yml  init_conda_venv.sh  init_python_venv.sh  pyproject  pyproject.toml  setup.cfg  setup.py
decisions/: 00001-use-of-decision-records.md
logs/: 20240625_103721.txt  20240625_103925.txt  20240625_112538.txt  20240625_113902.txt  20240625_114326.txt  20240625_114527.txt  20240625_115315.txt  20240625_130206.txt  20240625_130854.txt  20240625_131140.txt
src/app/: ui.py
src/llmagent/: utils.py
src/llmagent/agent/: agent.py  aiquery.py  prompts.py  test.py  tools.py
src/llmagent/collect/: genes.py  go.py  goa.py  kegg2neo.py  kegg_xml.py  mondo.py  ot.py  pathway.py
src/llmagent/neo4j/: import.sh
tests/: test_example.py
